--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
+    "type-check": "tsc --noEmit",
     "start": "next start",
     "lint": "eslint"
   },
   "dependencies": {
     "axios": "^1.12.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
     "next": "15.5.3",
     "next-intl": "^4.3.8",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
