--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "15.5.3",
     "next-intl": "^4.3.8",
     "next-pwa": "^5.6.0",
+    "postcss": "^8.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.0",
